--- a/trial.ipynb
+++ b/trial.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x117f08820>]"
+       "[<matplotlib.lines.Line2D at 0x11442cf40>]"
       ]
      },
      "execution_count": 2,
@@ -93,9 +93,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.3 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python37364bit925fda38f9454b7cb3e0d93b30df69ca"
   },
   "language_info": {
    "codemirror_mode": {
@@ -108,7 +108,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
