catch upper layer list

--- a/citystudy/datacollect.ipynb
+++ b/citystudy/datacollect.ipynb
@@ -85,10 +85,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "首都新发展格局下的乡镇国土空间规划\n",
+      "《长株潭都市圈发展规划》正式印发\n",
+      "为子孙后代留下美丽家园——习近平总书记关心推动国土绿化纪实\n",
+      "联合国统计委员会批准全球城市监测框架\n",
+      "举全党全社会之力推动乡村振兴\n",
+      "联合国人居署宣布设立“上海全球可持续发展城市奖”\n",
+      "浙江印发执行国土空间设计技术指南\n",
+      "千年大计 雄安五年\n",
+      "《全国城镇老旧小区改造统计调查制度》印发\n",
+      "2022年传统村落集中连片保护利用示范县（市、区）名单公示\n",
+      "从无障碍环境建设和公共设施适老化改造看一座城市的温度\n",
+      "《关于推进共建“一带一路”绿色发展的意见》发布\n",
+      "推进“1+N”政策体系落实， 形成减污降碳激励约束机制\n",
+      "实践 | 仙境绿港 • 创智蓝湾——烟台芝罘湾战略提升及城市设计\n"
+     ]
+    }
+   ],
+   "source": [
+    "strtmp2 = htmltmp.xpath('//div[@class=\"theiaStickySidebar\"]/div/h4/a')\n",
+    "for t in strtmp2[1:]:\n",
+    "    print(t.xpath('text()')[0].encode('ISO-8859-1').decode('utf-8'))"
+   ]
   }
  ],
  "metadata": {
