catch all of array

--- a/citystudy/datacollect.ipynb
+++ b/citystudy/datacollect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "北京市首个乡镇国土空间规划批复\n",
-      "http://www.planning.org.cn/news/view?id=12420&cid=12\n"
+      "北京印发国土空间调查、规划、用途管制用地分类指南\n",
+      "http://www.planning.org.cn/news/view?id=12429&cid=12\n"
      ]
     }
    ],
@@ -85,13 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "北京印发国土空间调查、规划、用途管制用地分类指南\n",
+      "一图读懂| 上海开展城市体检工作，提升城市现代化治理水平！\n",
+      "住房和城乡建设部村镇建设司召开“设计下乡”工作座谈会\n",
+      "我国将开展青年发展型城市建设试点\n",
+      "江西九江入列中国国家历史文化名城\n",
+      "北京市首个乡镇国土空间规划批复\n",
       "首都新发展格局下的乡镇国土空间规划\n",
       "《长株潭都市圈发展规划》正式印发\n",
       "为子孙后代留下美丽家园——习近平总书记关心推动国土绿化纪实\n",
@@ -100,20 +106,22 @@
       "联合国人居署宣布设立“上海全球可持续发展城市奖”\n",
       "浙江印发执行国土空间设计技术指南\n",
       "千年大计 雄安五年\n",
-      "《全国城镇老旧小区改造统计调查制度》印发\n",
-      "2022年传统村落集中连片保护利用示范县（市、区）名单公示\n",
-      "从无障碍环境建设和公共设施适老化改造看一座城市的温度\n",
-      "《关于推进共建“一带一路”绿色发展的意见》发布\n",
-      "推进“1+N”政策体系落实， 形成减污降碳激励约束机制\n",
-      "实践 | 仙境绿港 • 创智蓝湾——烟台芝罘湾战略提升及城市设计\n"
+      "《全国城镇老旧小区改造统计调查制度》印发\n"
      ]
     }
    ],
    "source": [
     "strtmp2 = htmltmp.xpath('//div[@class=\"theiaStickySidebar\"]/div/h4/a')\n",
-    "for t in strtmp2[1:]:\n",
+    "for t in strtmp2:\n",
     "    print(t.xpath('text()')[0].encode('ISO-8859-1').decode('utf-8'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
