fix relative import path as ../lib, workable for Jupyterlab webpage

--- a/thinkstats2/chap02ex.ipynb
+++ b/thinkstats2/chap02ex.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "Counter({2: 2, 1: 1, 3: 1, 5: 1})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -140,16 +140,15 @@
        "Hist({1: 1, 2: 2, 3: 1, 5: 1})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import sys\n",
-    "import os\n",
-    "sys.path.append('/.')\n",
-    "import lib.thinkstats2 as thinkstats2\n",
+    "sys.path.append('../lib')\n",
+    "import thinkstats2\n",
     "hist = thinkstats2.Hist([1, 2, 2, 3, 5])\n",
     "hist"
    ]
