move lib path to top. add  cell to get mode number with dict sorting

--- a/thinkstats2/chap02ex.ipynb
+++ b/thinkstats2/chap02ex.ipynb
@@ -17,10 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../lib')\n",
     "import numpy as np"
    ]
   },
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +142,12 @@
        "Hist({1: 1, 2: 2, 3: 1, 5: 1})"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append('../lib')\n",
     "import thinkstats2\n",
     "hist = thinkstats2.Hist([1, 2, 2, 3, 5])\n",
     "hist"
@@ -254,12 +254,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "2 2\n",
+      "3 1\n",
+      "5 1\n"
+     ]
+    }
+   ],
    "source": [
     "for val, freq in hist.Items():\n",
     "     print(val, freq)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sort items by values descreasely, to get mode number(众数)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n",
+      "1 1\n",
+      "3 1\n",
+      "5 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for val, freq in sorted(hist.Items(), key=lambda x: x[1], reverse=True):\n",
+    "    print(val, freq)"
    ]
   },
   {
@@ -275,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
